Illustrate and add formulas

--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,22 +165,49 @@
     "\n",
     "If we observe the character moving around, we can model its states. For each state it falls into, we can associate a probability dependent on every possible states and actions in time. Now, we can simplify by assuming Markov properties, the next state depends only what already happened and more precisely only on the current state and action.\n",
     "\n",
-    "[schema]\n",
+    "<div>\n",
+    "<img src=\"images/mdp.jpg\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
+    "For example, $\\mathbb{P}(s_3 | s_1, a_1, s_2, a_2) = \\mathbb{P}(s_3 | s_2, a_2)$.\n",
     "\n",
     "The goal now is to find a policy, that is to say find what action to do knowing the current state.\\\n",
     "What could the policy optimize ? \n",
     "\n",
-    "One answer is the total rewards [equation]. Let's say we have a policy, a deterministic one to simplify, that enable our character to reach the goal. We use this policy to go from start to finish, we call that an episode. At the end, I want the total reward to be as large as possible. Even if we get the largest total reward, does this mean we have the best policy ? No, it means that we have the best path from start to finish. With a different starting point, the path given by our policy would not necessarily be the best.\\\n",
+    "One answer is the total rewards $\\sum_{t=0}^{\\infty} r_{t}$. Let's say we have a policy, a deterministic one to simplify, that enable our character to reach the goal. We use this policy to go from start to finish, we call that an episode. At the end, I want the total reward to be as large as possible. Even if we get the largest total reward, does this mean we have the best policy ? No, it means that we have the best path from start to finish. With a different starting point, the path given by our policy would not necessarily be the best.\\\n",
     "Hence we want that from any state our policy provides us with the best path. The best policy is the one that returns the best total reward on average.\\\n",
     "The principle holds with a stochastic policy. \n",
     "\n",
-    "The expected reward is a better answer [equation]. More precisely, we are interested in the discounted reward. Nearby rewards in time are more interesting to us than further away ones. The idea is that we want to find a policy that penalizes rewards too far in time.\\\n",
+    "The expected reward is a better answer $\\mathbb{E}(\\sum_{i=t}^{\\infty} r_{i} | s_{t}=s)$. More precisely, we are interested in the expectancy of the discounted reward $\\mathbb{E}(r_{t} + \\gamma^{k}r_{t+1+k} | s_{t}=s)$. Nearby rewards in time are more interesting to us than further away ones, $\\gamma$ is usually smaller than 1. The idea is that we want to find a policy that penalizes rewards too far in time.\\\n",
     "When do we get the rewards ? Either we know the reward function but its rarely the case, or we don't and we get rewards from the environment after doing an action from a state.\n",
     "\n",
-    "Another idea is to associate a value to either each state or to each tuple (state, action) possible. Those are named respectively the value fonction and the action value fonction. One interesting way to do it is to reflect the expected discounted rewards at each state/(state, action). We can store the Value fonction in a vector and the Action Value function is a matrix.\\\n",
+    "This expectancy of the discounted reward $\\mathbb{E}(r_{t} + \\gamma^{k}r_{t+1+k} | s_{t}=s)$ hence associate a value to each state. We could do the same to each tuple (state, action) possible $\\mathbb{E}(r_{t} + \\gamma^{k}r_{t+1+k} | s_{t}=s, a_{t}=a)$. Those are named respectively the value fonction and the action value fonction (also Q-value function, with Q standing for Quality). In a discrete case, we can store the Value fonction in a vector and the Action Value function is a matrix.\\\n",
     "This idea comes naturally when rethinking about having the best path from any starting point. Thus any state should have a value showing how much reward is expected. And on another granularity when may wonder the same for any tuple (state, action).\n",
     "\n",
     "Note : in this example, our character has an end goal, there might none. But it is the same, after n time steps we'd like the best possible policy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ideally, we find the best possible Value and Q-Value function.\n",
+    "Let's write what the Value is $V_{\\pi}(s) = \\mathbb{E}(r_{t} + \\gamma^{k} V_{\\pi}(s_{t+1}) | s_{t}=s)$. Notice the subscript $\\pi$, since the value depends on the policy. You can think of V as the average (discounted reward) over all possibles path starting from $s_t$, which is the same as taking the average of all rewards starting from $s_t$ plus the value of the respective $s_{t+1}$. Illustrated as follow.\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"images/vqfunctions.jpg\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
+    "Something important is lacking in this graph. In general we do not know the transition model, meaning we don't know in advance what is $\\mathbb{P}(s'|s,a)$. A better graph would be :\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"images/vqfunctions_transition.jpg\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
+    "Knowing that a non-deterministic policy can suggest several actions, we can decompose our $V_{\\pi}(s)$ as $\\sum_{a}\\pi(a|s)\\sum_{s', r}$\n",
+    "\n",
+    "The best V and Q function are obtained for the best policy. In that case the policy becomes deterministic, it is the one that yields the best value for any state.\n",
+    "We get "
    ]
   },
   {
